--- a/contact.html
+++ b/contact.html
@@ -179,8 +179,8 @@
                         </div>
                         <!-- Address -->
                         <div class="address mt-30">
-                            <h6><img src="img/icons/phone-call.png" alt=""> +45 677 8993000 223</h6>
-                            <h6><img src="img/icons/envelope.png" alt=""> info@primeplan.com</h6>
+                            <h6><img src="img/icons/phone-call.png" alt=""> +254 706 188484</h6>
+                            <h6><img src="img/icons/envelope.png" alt=""> info@purevine.co.ke</h6>
                             <h6><img src="img/icons/location.png" alt=""> Nairobi, Kenyatta Ave, DB house,<br> left wing rm 23</h6>
                         </div>
                     </div>
