--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                         <div class="classynav">
                             <ul>
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="single-listings.html">Our Works</a></li>
+                                <li><a href="work.html">Our Works</a></li>
                                 <li><a href="about-us.html">About Us</a></li>
-                                <li><a href="listings.html">Products</a></li>
+                                <li><a href="products.html">Products</a></li>
                                 <li><a href="blog.html">Blog</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
