--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <img src="img/icons/phone-call.png" alt="">
                     </div>
                     <div class="number">
-                        <a href="tel:+254 706 188 484">+254 706 188 484</a>
+                        <a href="tel:+254 775 703 393">+254 775 703 393</a>
                     </div>
                 </div>
             </div>
@@ -52,7 +52,7 @@
                 <nav class="classy-navbar justify-content-between" id="southNav">
 
                     <!-- Logo -->
-                    <a class="nav-brand" href="index.html"><img src="img/core-img/logo-01.png" alt=""></a>
+                    <a class="nav-brand" href="index.html"><img src="img/core-img/logo.png" alt=""></a>
 
                     <!-- Navbar Toggler -->
                     <div class="classy-navbar-toggler">
@@ -355,7 +355,7 @@
                             </div>
                             <!-- Address --> 
                             <div class="address">
-                                <h6><img src="img/icons/phone-call.png" alt="">+254 706 188 484</h6>
+                                <h6><img src="img/icons/phone-call.png" alt="">+254 775 703 393</h6>
                                 <h6><img src="img/icons/envelope.png" alt="">info@purevine.co.ke</h6>
                                 <h6><img src="img/icons/location.png" alt=""> Nairobi, Kenyatta Ave, DB house.</h6>
                             </div>
