--- a/about-us.html
+++ b/about-us.html
@@ -122,7 +122,7 @@
                     </div>
                     <div class="about-content">
                         <img class="wow fadeInUp" data-wow-delay="350ms" src="img/bg-img/wall.jpg" alt="">
-                        <p class="wow fadeInUp" data-wow-delay="450ms">Integer nec bibendum lacus. Suspendisse dictum enim sit amet libero malesuada. Integer nec bibendum lacus. Suspendisse dictum enim sit amet libero malesuada feugiat. Praesent malesuada congue magna at finibus. In hac habitasse platea dictumst. Curabitur rhoncus auctor eleifend. Fusce venenatis diam urna, eu pharetra arcu varius ac. Etiam cursus turpis lectus, id iaculis risus tempor id. Phasellus fringilla nisl sed sem scelerisque, eget aliquam magna vehicula.</p>
+                        <p class="wow fadeInUp" data-wow-delay="450ms">Since 1995, MultiChoice has been quietly getting on with the business of bringing you world-class entertainment. But more importantly, we’ve taken to heart the responsibility of uplifting our communities and our country. Take a scroll down memory lane and see how far our business has come.</p>
                     </div>
                 </div>
 
@@ -335,9 +335,9 @@
                             <!-- Office Hours -->
                             <div class="weekly-office-hours">
                                 <ul>
-                                    <li class="d-flex align-items-center justify-content-between"><span>Monday - Friday</span> <span>08 AM - 5 PM</span></li>
-                                    <li class="d-flex align-items-center justify-content-between"><span>Saturday</span> <span>09 AM - 14 PM</span></li>
-                                    <li class="d-flex align-items-center justify-content-between"><span>Sunday</span> <span>Closed</span></li>
+                                    <li class="d-flex align-items-center justify-content-between"><span>Monday - Friday</span> <span>24 HOURS (Always Open)</span></li>
+                                    <li class="d-flex align-items-center justify-content-between"><span>Saturday</span> <span>24 HOURS (Always Open)</span></li>
+                                    <li class="d-flex align-items-center justify-content-between"><span>Sunday</span> <span>24 HOURS (Always Open)</span></li>
                                 </ul>
                             </div>
                             <!-- Address --> 
