--- a/products.html
+++ b/products.html
@@ -211,7 +211,7 @@
                                 <span>For Sale</span>
                             </div>
                             <div class="list-price">
-                                <p>Ksh. 3,000</p>
+                                <p>Ksh. 3,500</p>
                             </div>
                         </div>
                         <!-- Property Content -->
@@ -308,7 +308,7 @@
                                 <span>For Sale</span>
                             </div>
                             <div class="list-price">
-                                <p>Ksh. 849</p>
+                                <p>Ksh. 1,000</p>
                             </div>
                         </div>
                         <!-- Property Content -->
@@ -438,7 +438,7 @@
                         </div>
                         <!-- Property Content -->
                         <div class="property-content">
-                            <h5>Curtains Rods</h5>
+                            <h5>curtain rods 2metres double</h5>
                             <p class="location"><img src="img/icons/location.png" alt="">Garden City Mall</p>
                             <p> We are the best.</p>
                             
@@ -533,9 +533,9 @@
                             <!-- Office Hours -->
                             <div class="weekly-office-hours">
                                 <ul>
-                                    <li class="d-flex align-items-center justify-content-between"><span>Monday - Friday</span> <span>08 AM - 5 PM</span></li>
-                                    <li class="d-flex align-items-center justify-content-between"><span>Saturday</span> <span>09 AM - 14 PM</span></li>
-                                    <li class="d-flex align-items-center justify-content-between"><span>Sunday</span> <span>Closed</span></li>
+                                    <li class="d-flex align-items-center justify-content-between"><span>Monday - Friday</span> <span>24 HOURS (Always Open)</span></li>
+                                    <li class="d-flex align-items-center justify-content-between"><span>Saturday</span> <span>24 HOURS (Always Open)</span></li>
+                                    <li class="d-flex align-items-center justify-content-between"><span>Sunday</span> <span>24 HOURS (Always Open)</span></li>
                                 </ul>
                             </div>
                             <!-- Address --> 
