--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>24 HOURS (Always Open)
 
         <!-- Main Header Area -->
         <div class="main-header-area" id="stickyHeader">
@@ -208,9 +208,9 @@
                             <!-- Office Hours -->
                             <div class="weekly-office-hours">
                                 <ul>
-                                    <li class="d-flex align-items-center justify-content-between"><span>Monday - Friday</span> <span>08 AM - 5 PM</span></li>
-                                    <li class="d-flex align-items-center justify-content-between"><span>Saturday</span> <span>09 AM - 14 PM</span></li>
-                                    <li class="d-flex align-items-center justify-content-between"><span>Sunday</span> <span>Closed</span></li>
+                                    <li class="d-flex align-items-center justify-content-between"><span>Monday - Friday</span> <span>24 HOURS (Always Open)</span></li>
+                                    <li class="d-flex align-items-center justify-content-between"><span>Saturday</span> <span>24 HOURS (Always Open)</span></li>
+                                    <li class="d-flex align-items-center justify-content-between"><span>Sunday</span> <span>24 HOURS (Always Open)</span></li>
                                 </ul>
                             </div>
                             <!-- Address --> 
