--- a/contact.html
+++ b/contact.html
@@ -176,7 +176,7 @@
         </div>
     </div> -->
 
-     <!-- ##### Footer Area Start ##### -->
+        <!-- ##### Footer Area Start ##### -->
     <footer class="footer-area section-padding-100-0 bg-img gradient-background-overlay" style="background-image: url(img/bg-img/f-03.png);">
         <!-- Main Footer Area -->
         <div class="main-footer-area">
@@ -253,21 +253,21 @@
                         <div class="footer-widget-area mb-100">
                             <!-- Widget Title -->
                             <div class="widget-title">
-                                <h6>Featured Properties</h6>
+                                <h6>Happy Clients</h6>
                             </div>
                             <!-- Featured Properties Slides -->
                             <div class="featured-properties-slides owl-carousel">
                                 <!-- Single Slide -->
                                 <div class="single-featured-properties-slide">
-                                    <a href="#"><img src="img/bg-img/fea-product.jpg" alt=""></a>
+                                    <a href="#"><img src="img/all/a-18.png" alt=""></a>
                                 </div>
                                 <!-- Single Slide -->
                                 <div class="single-featured-properties-slide">
-                                    <a href="#"><img src="img/bg-img/fea-product.jpg" alt=""></a>
+                                    <a href="#"><img src="img/all/a-12.png" alt=""></a>
                                 </div>
                                 <!-- Single Slide -->
                                 <div class="single-featured-properties-slide">
-                                    <a href="#"><img src="img/bg-img/fea-product.jpg" alt=""></a>
+                                    <a href="#"><img src="img/all/a-13.png" alt=""></a>
                                 </div>
                             </div>
                         </div>
