--- a/index.html
+++ b/index.html
@@ -257,11 +257,11 @@
                  
 
                 <!-- Single Featured Property -->
-                <div class="col-12 col-md-12">
+             <div class="col-12 col-md-6 col-xl-4">
                     <div class="single-featured-property mb-50 wow fadeInUp" data-wow-delay="100ms">
                         <!-- Property Thumbnail -->
                         <div class="property-thumb">
-                            <iframe width="500" height="350" src="https://www.youtube.com/embed/hiV6MSspPZw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe width="350" height="280" src="https://www.youtube.com/embed/hiV6MSspPZw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                             <div class="tag">
                                 <span>For Sale</span>
