--- a/about-us.html
+++ b/about-us.html
@@ -128,7 +128,7 @@
 
                 <div class="col-12 col-lg-4">
                     <div class="section-heading text-left wow fadeInUp" data-wow-delay="250ms">
-                        <h2>Featured Properties</h2>
+                        <h2>Always the Best</h2>
                         <p>Book one Now !!!!</p>
                     </div>
 
@@ -246,58 +246,18 @@
                         <div class="team-member-info">
                             <div class="section-heading">
                                 <img src="img/icons/prize.png" alt="">
-                                <h2>Benjamin DSTV</h2>
+                                <h2>Benjamin Kyalo</h2>
                                 <p>Managing Dictor</p>
                             </div>
                             <div class="address">
                                 <h6><img src="img/icons/phone-call.png" alt=""> +254 706 188484</h6>
-                                <h6><img src="img/icons/envelope.png" alt=""> benjamin@urevine.co.ke</h6>
+                                <h6><img src="img/icons/envelope.png" alt=""> benjamin@purevine.co.ke</h6>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- Single Team Member -->
-                <div class="col-12 col-sm-6 col-lg-4">
-                    <div class="single-team-member mb-100 wow fadeInUp" data-wow-delay="500ms">
-                        <!-- Team Member Thumb -->
-                        <div class="team-member-thumb">
-                            <img src="img/bg-img/team2.jpg" alt="">
-                        </div>
-                        <!-- Team Member Info -->
-                        <div class="team-member-info">
-                            <div class="section-heading">
-                                <img src="img/icons/prize.png" alt="">
-                                <h2>Maria Williams</h2>
-                                <p>Marketing Director</p>
-                            </div>
-                            <div class="address">
-                                <h6><img src="img/icons/phone-call.png" alt=""> +45 677 8993000 223</h6>
-                                <h6><img src="img/icons/envelope.png" alt=""> maria@urevine.co.ke</h6>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Single Team Member -->
-                <div class="col-12 col-sm-6 col-lg-4">
-                    <div class="single-team-member mb-100 wow fadeInUp" data-wow-delay="750ms">
-                        <!-- Team Member Thumb -->
-                        <div class="team-member-thumb">
-                            <img src="img/bg-img/team3.jpg" alt="">
-                        </div>
-                        <!-- Team Member Info -->
-                        <div class="team-member-info">
-                            <div class="section-heading">
-                                <img src="img/icons/prize.png" alt="">
-                                <h2>Patrick Joe</h2>
-                                <p>Realtor</p>
-                            </div>
-                            <div class="address">
-                                <h6><img src="img/icons/phone-call.png" alt=""> +45 677 8993000 223</h6>
-                                <h6><img src="img/icons/envelope.png" alt=""> joe@urevine.co.ke</h6>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                
+                
             </div>
         </div>
     </section>
