--- a/work.html
+++ b/work.html
@@ -181,12 +181,12 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="contact-realtor-wrapper">
                         <div class="realtor-info">
-                            <img src="img/bg-img/listing.jpg" alt="">
+                            <img src="img/bg-img/dp.jpg" alt="">
                             <div class="realtor---info">
                                 <h2>Benjamin DSTV</h2>
                                 <p>Managing Director</p>
                                 <h6><img src="img/icons/phone-call.png" alt=""> +254 706 188484</h6>
-                                <h6><img src="img/icons/envelope.png" alt="">benhamin@purevine.co.ke</h6>
+                                <h6><img src="img/icons/envelope.png" alt="">benjamin@purevine.co.ke</h6>
                             </div>
                             <div class="realtor--contact-form">
                                 <form action="#" method="post">
