--- a/products.html
+++ b/products.html
@@ -333,12 +333,38 @@
                                 <span>For Sale</span>
                             </div>
                             <div class="list-price">
-                                <p>Ksh. 2,999</p>
+                                <p>Ksh. 2,000</p>
                             </div>
                         </div>
                         <!-- Property Content -->
                         <div class="property-content">
-                            <h5>Dstv HD Decoder + 1 Month Access</h5>
+                            <h5>Zappa Decoder Only</h5>
+                            <p class="location"><img src="img/icons/location.png" alt="">Garden City Mall</p>
+                            <p> Contact us now for more.</p>
+                            
+                        </div>
+                    </div>
+                </div>
+                <!-- End -->
+
+
+                <!-- Start -->
+                <div class="col-12 col-md-6 col-xl-4">
+                    <div class="single-featured-property mb-50 wow fadeInUp" data-wow-delay="100ms">
+                        <!-- Property Thumbnail -->
+                        <div class="property-thumb">
+                            <img src="img/bg-img/a-04.png" alt="">
+
+                            <div class="tag">
+                                <span>For Sale</span>
+                            </div>
+                            <div class="list-price">
+                                <p>Ksh. 3,000</p>
+                            </div>
+                        </div>
+                        <!-- Property Content -->
+                        <div class="property-content">
+                            <h5>Zappa decoder (with package Access 1month)</h5>
                             <p class="location"><img src="img/icons/location.png" alt="">Garden City Mall</p>
                             <p> Contact us now for more.</p>
                             
