--- a/about-us.html
+++ b/about-us.html
@@ -39,7 +39,7 @@
                         <img src="img/icons/phone-call.png" alt="">
                     </div>
                     <div class="number">
-                        <a href="tel:+254 775 703 393">+254 775 703 393</a>
+                        <a href="tel:+254 706 188 484">+254 706 188 484</a>
                     </div>
                 </div>
             </div>
@@ -146,6 +146,7 @@
                                 
                             </div>
                             <!-- Property Content -->
+
                             <div class="property-content">
                             
                             <p class="location"><img src="img/icons/location.png" alt="">Garden City Mall</p>
@@ -247,11 +248,12 @@
                             <div class="section-heading">
                                 <img src="img/icons/prize.png" alt="">
                                 <h2>Benjamin Kyalo</h2>
-                                <p>Managing Dictor</p>
+                                <p>Managing Director</p>
                             </div>
                             <div class="address">
                                 <h6><img src="img/icons/phone-call.png" alt=""> +254 706 188484</h6>
                                 <h6><img src="img/icons/envelope.png" alt=""> benjamin@purevine.co.ke</h6>
+                                <p><a href="https://wa.me/+254706188484" class="fa fa-whatsapp" style="font-size:18px;color:green"> Whatsapp Us</a></p>
                             </div>
                         </div>
                     </div>
@@ -302,7 +304,7 @@
                             </div>
                             <!-- Address --> 
                             <div class="address">
-                                <h6><img src="img/icons/phone-call.png" alt="">+254 775 703 393</h6>
+                                <h6><img src="img/icons/phone-call.png" alt="">+254 706 188 484</h6>
                                 <h6><img src="img/icons/envelope.png" alt="">info@purevine.co.ke</h6>
                                 <h6><img src="img/icons/location.png" alt=""> Nairobi, Kenyatta Ave, DB house.</h6>
                             </div>
