--- a/work.html
+++ b/work.html
@@ -189,20 +189,20 @@
                                 <h6><img src="img/icons/envelope.png" alt="">benjamin@purevine.co.ke</h6>
                             </div>
                             <div class="realtor--contact-form">
-                                <form action="#" method="post">
+                                <form action="message.php" method="post">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" id="realtor-name" placeholder="Your Name">
+                                        <input type="text" class="form-control" name="name" placeholder="Your Name">
                                     </div>
                                     <div class="form-group">
-                                        <input type="number" class="form-control" id="realtor-number" placeholder="Your Number">
+                                        <input type="number" class="form-control" name="telephone" placeholder="Your Number">
                                     </div>
                                     <div class="form-group">
-                                        <input type="enumber" class="form-control" id="realtor-email" placeholder="Your Mail">
+                                        <input type="email" class="form-control" name="email" placeholder="Your Mail">
                                     </div>
                                     <div class="form-group">
                                         <textarea name="message" class="form-control" id="realtor-message" cols="30" rows="10" placeholder="Your Message"></textarea>
                                     </div>
-                                    <button type="submit" class="btn south-btn">Send Message</button>
+                                    <button type="submit" name="submit" class="btn south-btn">Send Message</button>
                                 </form>
                             </div>
                         </div>
