--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </div>
             </div>
             <!-- Single Hero Slide -->
-            <div class="single-hero-slide bg-img" style="background-image: url(img/bg-img/f-02.png);">
+            <div class="single-hero-slide bg-img" style="background-image: url(img/bg-img/F-02.png);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
                         <div class="col-12">
@@ -138,7 +138,7 @@
             </div>
 
             <!-- Single Hero Slide -->
-            <div class="single-hero-slide bg-img" style="background-image: url(img/bg-img/f-03.png);">
+            <div class="single-hero-slide bg-img" style="background-image: url(img/bg-img/F-03.png);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
                         <div class="col-12">
@@ -150,7 +150,7 @@
                 </div>
             </div>
             <!-- Single Hero Slide -->
-            <div class="single-hero-slide bg-img" style="background-image: url(img/bg-img/f-01.png);">
+            <div class="single-hero-slide bg-img" style="background-image: url(img/bg-img/F-01.png);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
                         <div class="col-12">
