--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,7 @@
                 <nav class="classy-navbar justify-content-between" id="southNav">
 
                     <!-- Logo -->
-                    <a class="nav-brand" href="index.html"><img src="img/core-img/logo.png" alt=""></a>
+                    <a class="nav-brand" href="https://www.purevine.co.ke/"><img src="img/core-img/logo.png" alt=""></a>
 
                     <!-- Navbar Toggler -->
                     <div class="classy-navbar-toggler">
@@ -70,12 +70,12 @@
                         <!-- Nav Start -->
                         <div class="classynav">
                             <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="work.html">Our Works</a></li>
-                                <li><a href="about-us.html">About Us</a></li>
-                                <li><a href="products.html">Products</a></li>
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="https://www.purevine.co.ke/">Home</a></li>
+                                <li><a href="/work">Our Works</a></li>
+                                <li><a href="/about-us">About Us</a></li>
+                                <li><a href="/products">Products</a></li>
+                                <li><a href="/blog">Blog</a></li>
+                                <li><a href="/contact">Contact</a></li>
                             </ul>
 
                             <!-- Search Form -->
@@ -326,17 +326,16 @@
                             </div>
                             <!-- Nav -->
                             <ul class="useful-links-nav d-flex align-items-center">
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">About us</a></li>
-                                <li><a href="#">About us</a></li>
-                                <li><a href="#">Services</a></li>
-                                <li><a href="#">Properties</a></li>
-                                <li><a href="#">Listings</a></li>
+                                <li><a href="https://www.purevine.co.ke/">Home</a></li>
+                                <li><a href="/about-us">About us</a></li>
+                                <li><a href="/about-us">About us</a></li>
+                                <li><a href="/products">Services</a></li>
+                                <li><a href="/products">Products</a></li>
+                                <li><a href="/work">Our Work</a></li>
                                 <li><a href="#">Testimonials</a></li>
-                                <li><a href="#">Properties</a></li>
                                 <li><a href="#">Blog</a></li>
                                 <li><a href="#">Testimonials</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="/contact">Contact</a></li>
                                 <li><a href="#">Elements</a></li>
                                 <li><a href="#">FAQ</a></li>
                             </ul>
