--- a/work.html
+++ b/work.html
@@ -188,7 +188,7 @@
                                 <h6><img src="img/icons/envelope.png" alt="">benjamin@purevine.co.ke</h6>
                             </div>
                             <div class="realtor--contact-form">
-                                <form action="message.php" method="post">
+                                <form action="/message" method="post">
                                     <div class="form-group">
                                         <input type="text" class="form-control" name="name" placeholder="Your Name">
                                     </div>
