--- a/contact.html
+++ b/contact.html
@@ -144,7 +144,7 @@
                 <!-- Contact Form Area -->
                 <div class="col-12 col-lg-8">
                     <div class="contact-form">
-                        <form action="message.php" method="post">
+                        <form action="/message" method="post">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name"  placeholder="Your Name">
                             </div>
